Minor formatting changes to header to remove horizontal scroll issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,10 +91,10 @@ header {
     width:100%;
     height: 100px;
     margin:auto;
-    border:2px solid #dddddd;
+    border-bottom:2px solid #dddddd;
     position: absolute;
-    top:-2px;
-    left:-2px;
+    top:0px;
+    left:0px;
 }
 
 footer {
